--- a/ticket.html
+++ b/ticket.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <title></title>
     <style media="screen">
+
+    @media only screen and (max-width: 320px) {
+      .ticket{
+        position: relative;
+        left: -2px!important;
+        top: 600px !important;
+      }
+      h1{
+        position: relative;
+        top: -250px !important;
+        text-align: center;
+        left: 40px !important;
+        font-style: normal;
+font-weight: normal;
+font-size: 50px !important;
+line-height: 70px;
+        font-family: Lovelace;
+        color: #FF003D;
+        width: 820px !important;
+      }
+      .calendarlink{
+        position: relative;
+        top: 560px !important;
+        font-style: normal;
+font-weight: normal;
+font-size: 80px !important;
+line-height: 70px;
+text-decoration: none;
+        font-family: Lovelace;
+        color: #FF003D;
+        left: 250px !important;
+        cursor: pointer;
+
+      }
+    }
+
       .ticket{
         position: relative;
         left: 180px;
